--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.3'
 services:
   bot:
     build: .
+    environment:
+      BOT_TOKEN: $BOT_TOKEN
     volumes:
      - ./:/usr/src/app
     restart: unless-stopped
